# RISC-V-Interpreter

./: CMakeLists.txt  README.md  main.cpp  output.txt  output_new.txt  presentation.md  run.bat  run.sh  run_bat_output.txt  run_output.txt  run_output2.txt
include/objects/: ELF.h  ELFHeader.h  InstructionType.h  Instructions.h  Program.h  ProgramHeader.h
include/util/: ByteUtil.h  FileUtil.h  InstructionUtil.h  Log.h  LogUtil.h  SignUtil.h
src/objects/: ELF.cpp  ELFHeader.cpp  Program.cpp  ProgramHeader.cpp
src/util/: ByteUtil.cpp  FileUtil.cpp  InstructionUtil.cpp  Log.cpp  LogUtil.cpp
